--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <title>Hello World!</title>
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
-  </body>
+</head>
 
-  <script>
-    // You can also require other files to run in this process
-    require('./renderer.js')
-  </script>
+<body>
+    <div>
+		<label for="archive-files">Select the files </label><input type="file" id="archiveFiles" name="archive-files" multiple onchange="parser.filesChangedEvent()"/>
+		<button onclick="parser.upload()">Analyze</button>
+    </div>
+    <div>
+		
+    </div>
+</body>
+
+<script>
+    var parser = require('./parser.js')
+</script>
+
 </html>
